feat: PBH iteration contract changes

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,17 +1,31 @@
 [profile.default]
 evm_version = 'cancun'
-src = "src"
-out = "out"
+fs_permissions = [{access = "read-write", path = "./"}]
 libs = ["lib"]
 optimizer = true
 optimizer_runs = 200
-fs_permissions = [{ access = "read-write", path = "./" }]
+out = "out"
+src = "src"
+
+remappings = [
+  "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+  "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
+  "@account-abstraction/contracts/=lib/account-abstraction/contracts/",
+  "@world-id-contracts/=lib/world-id-contracts/src/",
+  "@BokkyPooBahsDateTimeLibrary/=lib/BokkyPooBahsDateTimeLibrary/contracts/",
+  "@lib/=src/lib/",
+  "openzeppelin-contracts/=lib/world-id-contracts/lib/openzeppelin-contracts/contracts/",
+  "@4337=lib/safe-modules/modules/4337/contracts/",
+  "@safe-global/safe-contracts/contracts/=lib/safe-contracts/contracts/",
+  "@forge-std/=lib/forge-std/src/",
+  "forge-std/=lib/forge-std/src/",
+  "@solady=lib/solady/src/utils/",
+]
 
 [fuzz]
-runs = 5000
 max_test_rejects = 150000
+runs = 5000
 
 [fmt]
 ignore = ["lib"]
-
 
