--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -44,6 +44,7 @@ optimism_package:
         builder_port: ""
       additional_services: 
         - rollup-boost
+        - blockscout
       
   op_contract_deployer_params:
     image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-deployer:v0.0.12
