--- a/devnet/docker-compose.yml
+++ b/devnet/docker-compose.yml
@@ -4,21 +4,19 @@ services:
   world-chain-builder:
     restart: unless-stopped
     image: world-chain-builder:latest
+    env_file:
+      - ./.env
     ports:
-      - '9001:9001' # metrics
-      - '30303:30303' # eth/66 peering
-      - '8545:8545' # rpc
-      - '8551:8551' # engine
+      - '192.168.0.91:9001:9001' # metrics
+      - '192.168.0.91:30303:30303' # eth/66 peering
+      - '192.168.0.91:8545:8545' # rpc
+      - '192.168.0.91:8551:8551' # engine
     volumes:
       - chain_data:/root/.local/share/reth/2151908
       - ./network-config:/root/network-config
       - logs:/root/logs
     pid: host
-    env_file:
-      - ./.env
-    networks:
-      world-chain:
-        ipv4_address: 10.5.0.5
+    network_mode: host
     command: >
       node
         --chain /root/network-config/genesis.json
@@ -29,7 +27,8 @@ services:
         --ws
         --ws.port 8546
         --ws.api=net,eth,miner
-        --nat=extip:10.5.0.1
+        --nat=extip:192.168.0.91
+        --trusted-peers=${L2_ENODE}
         --ws.origins=*
         --log.file.directory /root/logs
         --authrpc.port 8551
@@ -60,7 +59,7 @@ services:
     network_mode: host
     command: >
       op-node
-        --l2=http:/10.5.0.5:8551
+        --l2=http://192.168.0.91:8551
         --l2.jwt-secret=/root/network-config/jwt.hex
         --verifier.l1-confs=1
         --rollup.config=/root/network-config/rollup.json
