--- a/devnet/kurtosis.yml
+++ b/devnet/kurtosis.yml
@@ -1,6 +1,5 @@
-name: github.com/0xOsiris/optimism-package
-description: |
-  # Optimism Package
-  This is a Kurtosis package for deploying an Optimism Rollup
-replace:
-  github.com/ethpandaops/ethereum-package: github.com/ethpandaops/ethereum-package@4.5.0
+name: github.com/worldcoin/world-chain-package
+description: |-
+  # github.com/example-org/example-package
+  Enter description Markdown here.
+replace: {}
