Dzejkop/new kurtosis devnet setup (#201)
* new devnet setup

* replace

* integrate rundler

* fix: devnet contracts deployment & e2e tests (#202)

* more logs in test

* Update devnet/kurtosis.yml

Co-authored-by: 0xOsiris <djosiris@proton.me>

* Update devnet/kurtosis.yml

Co-authored-by: 0xOsiris <djosiris@proton.me>

* fixes + use the replace function for fork

---------

Co-authored-by: 0xOsiris <djosiris@proton.me>

--- a/devnet/kurtosis.yml
+++ b/devnet/kurtosis.yml
@@ -1,6 +1,5 @@
-name: github.com/0xOsiris/optimism-package
-description: |
-  # Optimism Package
-  This is a Kurtosis package for deploying an Optimism Rollup
+name: github.com/worldcoin/world-chain-package
+description: |-
+  This is a Kurtosis package for deploying the World Chain Builder in an Optimism Rollup
 replace:
-  github.com/ethpandaops/ethereum-package: github.com/ethpandaops/ethereum-package@4.5.0
+  github.com/ethpandaops/optimism-package: github.com/dzejkop/optimism-package
