--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -53,7 +53,9 @@ jobs:
             --debug.max-block ${{ matrix.chain.block }} \
             --debug.terminate \
             --builder.pbh_entrypoint 0x7a2088a1bFc9d81c55368AE168C2C02570cB814F \
-            --builder.signature_aggregator 0x09635F643e140090A9A8Dcd712eD6285858ceBef
+            --builder.signature_aggregator 0x09635F643e140090A9A8Dcd712eD6285858ceBef \
+            --builder.private_key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 \
+            --builder.world_id 0x5FbDB2315678afecb367f032d93F642f64180aa3
 
       - name: Verify the target block hash
         run: |
