--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -10,6 +10,8 @@ optimism_package:
         cl_type: op-node
         el_builder_type: custom
         el_builder_image: world-chain-builder:latest
+      - el_type: op-reth
+      - el_type: op-reth
       mev_params:
         rollup_boost_image: "flashbots/rollup-boost:latest"
       additional_services:
@@ -39,3 +41,8 @@ ethereum_package:
         }
       }
     '
+contender_params:
+  interval: 5
+  duration: 10
+  num_txs: 500
+  scenario: "stress"
