--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,81 +40,83 @@ world-chain-builder-pool = { path = "crates/world/pool" }
 world-chain-builder-test-utils = { path = "crates/world/test-utils" }
 
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0", features = [
+reth = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7", features = [
   "test-utils",
 ] }
-reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0", default-features = false }
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
+reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7", default-features = false }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
 
 # reth-optimism
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth_payload_util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
-reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.0" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth_payload_util = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "v1.3.7" }
+
 # alloy op
-op-alloy-consensus = "0.11.0"
-op-alloy-rpc-types = "0.11.0"
-op-alloy-rpc-types-engine = "0.11.0"
-op-alloy-network = "0.11.0"
+op-alloy-consensus = "0.12.0"
+op-alloy-rpc-types = "0.12.0"
+op-alloy-rpc-types-engine = "0.12.0"
+op-alloy-network = "0.12.0"
 
 # alloy
-alloy = { version = "0.12.5" }
-alloy-provider = { version = "0.12.5", default-features = false }
-alloy-rpc-client = { version = "0.12.5", default-features = false }
-alloy-transport-http = { version = "0.12.5", default-features = false }
-alloy-transport = { version = "0.12.5", default-features = false }
-alloy-consensus = { version = "0.12.5", default-features = false }
-alloy-network = { version = "0.12.5", default-features = false }
-alloy-primitives = { version = "0.8.20", default-features = false }
-alloy-rpc-types-eth = { version = "0.12.5", default-features = false }
-alloy-rpc-types = { version = "0.12.5", features = [
+alloy = { version = "0.13.0" }
+alloy-provider = { version = "0.13.0", default-features = false }
+alloy-rpc-client = { version = "0.13.0", default-features = false }
+alloy-transport-http = { version = "0.13.0", default-features = false }
+alloy-transport = { version = "0.13.0", default-features = false }
+alloy-consensus = { version = "0.13.0", default-features = false }
+alloy-network = { version = "0.13.0", default-features = false }
+alloy-primitives = { version = "0.8.25", default-features = false }
+alloy-rpc-types-eth = { version = "0.13.0", default-features = false }
+alloy-rpc-types = { version = "0.13.0", features = [
   "eth",
 ], default-features = false }
-alloy-rpc-types-engine = { version = "0.12.5" }
+alloy-rpc-types-engine = { version = "0.13.0" }
 alloy-rlp = "0.3.10"
-alloy-eips = { version = "0.12.5", default-features = false }
-alloy-genesis = { version = "0.12.5", default-features = false }
-alloy-rpc-types-debug = "0.12.5"
-alloy-signer = { version = "0.12.5", default-features = false }
-alloy-signer-local = { version = "0.12.5", default-features = false }
-alloy-sol-types = "0.8.18"
+alloy-eips = { version = "0.13.0", default-features = false }
+alloy-genesis = { version = "0.13.0", default-features = false }
+alloy-rpc-types-debug = "0.13.0"
+alloy-signer = { version = "0.13.0", default-features = false }
+alloy-signer-local = { version = "0.13.0", default-features = false }
+alloy-sol-types = "0.8.25"
 
 # revm
-revm = { version = "20.0.0-alpha.5", default-features = false }
-revm-primitives = { version = "16.0.0-alpha.3", default-features = false }
-op-revm = { version = "1.0.0-alpha.3", default-features = false }
+revm = { version = "21.0.0", default-features = false }
+revm-primitives = { version = "17.0.0", default-features = false }
+op-revm = { version = "2.0.0", default-features = false }
 
 # rpc
 jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
