--- a/crates/world/pool/Cargo.toml
+++ b/crates/world/pool/Cargo.toml
@@ -26,6 +26,7 @@ reth-e2e-test-utils = { workspace = true, optional = true }
 revm-primitives.workspace = true
 reth-primitives-traits.workspace = true
 reth-optimism-forks.workspace = true
+reth-node-ethereum = { workspace = true, optional = true }
 
 alloy-consensus.workspace = true
 alloy-genesis = { workspace = true, optional = true }
@@ -62,6 +63,7 @@ test = [
     "world-chain-builder-test-utils",
     "dep:reth-e2e-test-utils",
     "dep:reth-optimism-chainspec",
+    "dep:reth-node-ethereum",
     "dep:reth-trie-db",
     "dep:reth-trie",
     "dep:reth-stages-types",
