--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
   build-and-push:
     name: build and push docker
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-32core
     needs: extract-version
     steps:
       - name: Check Out Repo
